--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ bower_components
 dist
 .DS_Store
 public/css/*
-!public/css/README.md
 public/fonts/icon-fonts/*
-!public/fonts/icon-fonts/README.md
-public/minjs/*
-!public/minjs/README.md
 public/index.html
+public/js/bundle.js
