--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "^2.3.3",
+    "errorhandler": "~1.3.2",
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "errorhandler": "~1.3.2",
+    "react": "^0.13.3",
     "request": "~2.55.0",
-    "watson-developer-cloud": "~0.9.16"
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "browser-sync": "~2.7.13",
+    "browserify": "^11.0.1",
     "del": "^1.2.0",
     "gulp": "~3.8.11",
     "gulp-clean": "^0.3.1",
