--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "gulp-minify-css": "~1.0.0",
     "gulp-nodemon": "~2.0.2",
     "gulp-plumber": "^1.0.1",
+    "gulp-reactify": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "^3.0.6",
+    "reactify": "^1.1.1",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
