--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "concept-insights-demo",
+  "name": "flashcard-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
