--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "browserify": "^11.0.1",
     "del": "^1.2.0",
     "gulp": "~3.8.11",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-browatchify": "0.0.0",
+    "gulp-develop-server": "^0.4.3",
+    "gulp-eslint": "^1.0.0",
     "gulp-iconfont": "~1.0.0",
     "gulp-iconfont-css": "0.0.9",
+    "gulp-if-else": "^1.0.3",
     "gulp-minify-css": "~1.0.0",
     "gulp-nodemon": "~2.0.2",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "^3.0.6",
+    "node-sass-import-once": "^1.2.0",
     "reactify": "^1.1.1",
+    "run-sequence": "^1.1.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1"
   }
 }
